# samples

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build_external_libs.bat  clang_format.bat  first_time_setup.bat  msbuild_make.bat  samples.sublime-project
data/assets/fbs/fbs_load/: include_test1.fbs  include_test2.fbs  monster_test.fbs
data/assets/meshes/: bunny_posonly.sdf  copyright.txt
data/assets/meshes/lostempire/: lost_empire.asset  lost_empire.mtl  lost_empire_tex.asset
data/assets/meshes/rungholt/: house.mtl  house_v2.mtl  house_v2.obj.v73.voxels  house_v2.obj.v74.voxels  house_v2.obj.v80.voxels  rungholt.asset  rungholt.mtl  rungholt_tex.asset
data/assets/objects/: monster.asset  monster.json
data/assets/shaders/: cs_light_cull.asset  cs_light_cull.sc  ps_copy.sc  ps_light.sc  ps_simple.sc  ps_z_prepass.sc  varying.def.sc  vs_light.sc  vs_postex.sc  vs_simple.asset  vs_simple.sc  vs_z_prepass.sc
data/assets/shaders/colour_only/: ps_simple.asset  ps_simple.sc  vs_simple.asset  vs_simple.sc
data/assets/shaders/common/: common.sh  shaderlib.sh
data/assets/shaders/cubes/: fs_cubes.asset  fs_cubes.sc  vs_cubes.asset  vs_cubes.sc
data/assets/shaders/simple/: ps_simple.asset  ps_simple.sc  varying.def.sc  vs_simple.asset  vs_simple.sc
data/assets/shaders/simpletex/: ps_simple.asset  ps_simple.sc  vs_simple.asset  vs_simple.sc
src/common/: common.sh  common_util.h  ktx.h  material.cpp  mesh.cpp
src/common/vectormath/SSE/cpp/: boolInVec.h  mat_aos.h  quat_aos.h  vec_aos.h  vecidx_aos.h  vectormath_aos.h
src/example/: build_data.bat  build_meshes.bat  build_shaders.bat  build_textures.bat  common_defines.h  main.cpp
src/example/assets/Summi_Pool/: Summi_Pool.ibl  Summi_Pool_3k.hdr  Summi_Pool_Env.hdr
src/example/assets/shaders/: ACES.sh  brdf_convolve.sc  calc_luminance.sc  convolve_common.sh  copy.sc  ir_convolve.sc  light_grid.cc  logLumaAv.cc  ps.sc  ps_debug.sc  ps_skybox.sc  ps_zfill.sc  sir_convolve.sc  tonemap.sc  varying.def.sc  vs.sc  vs_skybox.sc  vs_zfill.sc
src/example/assets/sponza/: sponza.mat
src/example/assets/sponza/textures_pbr/: ChainTexture_Albedo.tga  chain_texture_mask.tga  sponza_thorn_mask.tga  vase_plant_mask.tga
src/mtlc/: mtlc.cpp
src/template/: build_data.bat  main.cpp
src/zbin/: build_data.bat  common_defines.h  main.cpp
src/zbin/assets/shaders/: light_grid.cc  ps.sc  ps_debug.sc  ps_zfill.sc  uniforms.sh  vs.sc  vs_postex.sc  vs_zfill.sc
